--- a/notebook/spaceship_titanic_prod.ipynb
+++ b/notebook/spaceship_titanic_prod.ipynb
@@ -722,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.0 (conda)",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +736,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7784bf76c13e2d65d807e3eed0101f41cf75b45ba284681efc6b1d4546aa4fe2"
+   }
   }
  },
  "nbformat": 4,
